2009-05-07	Jannis Pohlmann <jannis@xfce.org>

	* docs/reference/: Improve API docs structure.
	* gdesktopmenu/Makefile.am, gdesktopmenu/gdesktopmenu.{c,h},
	  gdesktopmenu/gdesktopmenumain.{c,h}: Move init/shutdown code into
	  gdesktopmenumain.{c,h}.

2009-05-07	Jannis Pohlmann <jannis@xfce.org>

	* Fix compilation errors, missing "lib" prefix and set the API version
	  to 1 (not the libtool one).

2009-05-07	Jannis Pohlmann <jannis@xfce.org>

	* Rename to gdesktopmenu. This will need a few more commits to work
	  again though.

2009-05-04	Travis Watkins <amaranth@ubuntu.com>

	* docs/reference/libxfce4menu-sections.txt,
	  libxfce4menu/xfce-menu-directory.{c,h},
	  libxfce4menu/xfce-menu-element.{c,h},
	  libxfce4menu/xfce-menu-item.{c,h}, 
	  libxfce4menu/xfce-menu-separator.c,
	  libxfce4menu/xfce-menu.c: Add xfce_menu_element_get_no_display() and
	  xfce_menu_element_get_visible_in_environment() to the
	  XfceMenuElement interface. Implement this in XfceMenu, 
	  XfceMenuDirectory, XfceMenuItem and XfceMenuSeparator. 

2009-05-03	Travis Watkins <amaranth@ubuntu.com>

	* docs/reference/libxfce4menu-sections.txt, libxfce4menu/xfce-menu.c,
	  libxfce4menu/xfce-menu-element.{c,h}, libxfce4menu/xfce-menu-item.c,
	  libxfce4menu/xfce-menu-separator.c: Add new function 
	  xfce_menu_element_get_comment() to the XfceMenuElement interface and
	  implement it in XfceMenu, XfceMenuItem and XfceMenuSeparator.

2009-04-04	Jannis Pohlmann <jannis@xfce.org>

	* AUTHORS: Add Travis Watkins as a contributor.
	* docs/reference: Update API docs.
	* libxfce4menu/xfce-menu-directory.{c,h},
	  libxfce4menu/xfce-menu-element.{c,h},
	  libxfce4menu/xfce-menu-item.c,
	  libxfce4menu/xfce-menu-separator.c, libxfce4menu/xfce-menu.c: Add
	  xfce_menu_element_get_visible() to XfceMenuElement. The
	  XfceMenuSeparator implementation always returns TRUE while the
	  XfceMenuItem implementation checks the Hidden/OnlyShowIn/NotShowIn